NIFI-10698: fix checkbox spacing and alignment

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/common-ui.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/common-ui.css
@@ -430,7 +430,7 @@ input.filter {
     margin-left: 5px;
 }
 
-.summary-filter-primary-node-container {
+.setting-field.summary-filter-primary-node-container {
     display: inline-block;
     margin-left: 10px;
     margin-top: 8px;
